# keyup

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  clickup_client.py  keyup.py  pyproject.toml  quickup.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: Makefile
docs/source/: Installation.rst  api.rst  commands.rst  conf.py  contributing.rst  features.rst  index.rst  quickstart.rst  troubleshooting.rst
docs/source/_static/: custom.css
keyup/: __init__.py
keyup/cli/: __init__.py  api_client.py  cache.py  config.py  exceptions.py  main.py  renderer.py
quickup/: __init__.py
quickup/cli/: __init__.py  cache.py  config.py  exceptions.py  main.py  renderer.py
tests/: __init__.py  conftest.py  test_api_client.py  test_cache.py  test_cli.py  test_config.py  test_exceptions.py  test_renderer.py  test_sprint.py  test_task_detail.py  test_update.py
